[add] basic auth support
